--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "a17671bd-a8df-47c0-9b5c-ccc7205f4d81"
 authors = ["Karen Chung <karenchung117@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+HashCode2014 = "7bbed249-721d-42ac-b1f6-7cf884be0fbe"
+
 [compat]
 julia = "1.8"
 
